PR 50342: if there is no current partition manage, assume we are running from an already installed system.