usr.sbin/sysinst/target.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: target.c,v 1.2 2014/08/03 16:09:38 martin Exp $	*/
+/*	$NetBSD: target.c,v 1.3 2015/10/18 09:21:55 martin Exp $	*/
 
 /*
  * Copyright 1997 Jonathan Stone
@@ -71,7 +71,7 @@
 
 #include <sys/cdefs.h>
 #if defined(LIBC_SCCS) && !defined(lint)
-__RCSID("$NetBSD: target.c,v 1.2 2014/08/03 16:09:38 martin Exp $");
+__RCSID("$NetBSD: target.c,v 1.3 2015/10/18 09:21:55 martin Exp $");
 #endif
 
 /*
@@ -152,6 +152,9 @@ backtowin(void)
 int
 target_already_root(void)
 {
+
+	if (pm == NULL)
+		return TRUE;
 
 	if (strcmp(pm->diskdev, "") == 0)
 		/* No root partition was ever selected.
